--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ header {text-align: center;}
 
 #hero,footer {text-align: center;
    font-family: Arial, Helvetica, sans-serif;
-    background-color: #a8a7a6;
+    background-color: #dfba96;
     border: 10px solid #368096;
     padding: 10px;
     font-size: 18pt;
