--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,14 @@ body{
 
 h1, h2, h3,h4,h5,h6
 {font-family:Oswald;
-font-size:44pt;
 color:#368096;
 }
+h1 {font-size:44pt;text-align: center;color:rgb(46, 27, 13) }
+h2 {font-size:36pt;text-align: left;color:saddlebrown;font-style: italic;font;text-decoration: underline;}
+h3 {font-size:34pt;text-align: center;}
+h4 {font-size:18pt;text-align: left;}
 
-header {text-align: center;}
+header {text-align: left;}
 
 #hero,footer {text-align: center;
    font-family: Arial, Helvetica, sans-serif;
@@ -24,8 +27,10 @@ header {text-align: center;}
 
     #hero img {width: 300px;}
 
-    #bio {text-align:center;
+    #bio {text-align:left;
         font-family: Oswald;
     font-size:14pt;
-    font-weight:bolder;
-}
+    font-weight:bolder;}
+
+    #li {text-align:left;font-family: Oswald;
+    font-size:14pt;font-weight:lighter}
