--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ h2 {font-size:36pt;text-align: left;color:saddlebrown;font-style: italic;font;te
 h3 {font-size:34pt;text-align: center;}
 h4 {font-size:18pt;text-align: left;}
 
-header {text-align: left;}
+header {text-align: center;}
 
 #hero,footer {text-align: center;
    font-family: Arial, Helvetica, sans-serif;
