--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header {text-align: center;}
     font-weight: bold;
     color:black;}
 
-    #hero img {width: 300px;}
+    #hero,img {width: 300px;}
 
     #bio {text-align:left;
         font-family: Oswald;
