--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ h4 {font-size:18pt;text-align: left;}
 
 header {text-align: center;}
 
+p {font-family:Arial, Helvetica, sans-serif;
+font-size: medium;
+font-weight: lighter;
+color:steelblue}
+
 #hero,footer {text-align: center;
    font-family: Arial, Helvetica, sans-serif;
     background-color: #dfba96;
