--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,13 @@ h4 {font-size:18pt;text-align: left;}
 
 header {text-align: center;}
 
-p {font-family:Arial, Helvetica, sans-serif;
+#p2 {font-family: Oswald;
 font-size: medium;
-font-weight: lighter;
-color:steelblue}
+font-weight: normal;
+color:sienna}
 
 #hero,footer {text-align: center;
-   font-family: Arial, Helvetica, sans-serif;
+   font-family:Oswald;
     background-color: #dfba96;
     border: 10px solid #368096;
     padding: 10px;
@@ -35,8 +35,8 @@ color:steelblue}
     #bio {text-align:left;
         font-family: Oswald;
     font-size:14pt;
-    font-weight:bolder;}
+    font-weight:normal;}
 
     #li{text-align:left;font-family: Oswald;
-    font-size:14pt;font-weight:lighter}
+    font-size:14pt;font-weight:normal}
 
