--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,7 @@ body{
 }
 
 h1, h2, h3,h4,h5,h6
-{font-family:Oswald;
-color:#368096;
-}
+{font-family:Oswald;color:#368096;}
 h1 {font-size:44pt;text-align: center;color:rgb(46, 27, 13) }
 h2 {font-size:36pt;text-align: left;color:saddlebrown;font-style: italic;font;text-decoration: underline;}
 h3 {font-size:34pt;text-align: center;}
@@ -23,7 +21,7 @@ color:sienna}
 #hero,footer {text-align: center;
    font-family:Oswald;
     background-color: #dfba96;
-    border: 10px solid #368096;
+    border: 5px solid #368096;
     padding: 10px;
     font-size: 18pt;
     font-style: italic;
@@ -39,4 +37,21 @@ color:sienna}
 
     #li{text-align:left;font-family: Oswald;
     font-size:14pt;font-weight:normal}
+
+    #gallery {border:14px;color:darkcyan;}
+  
+    #gallery img{max-width: 100%;}
+    
+    #gallery figure {text-align:center;}
+
+    #lit
+    {text-align: left;
+    font-family:Oswald;
+    background-color:rgb(120, 145, 120);
+    line-height: 2.5;
+    font-size: 18pt;color: bisque;font-weight:lighter;
+    border: 14px;text-align: left;text-align:left;
+    font-family: Oswald; font-size:14pt;}
+
+    #lit div {padding: 1px;max-width: 100rem;}
 
