--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,15 @@ color:sienna}
     font-size:14pt;
     font-weight:normal;
   
-    #box1{{text-align: center;
+    #box1 {text-align: center;
         font-family:Oswald;
          background-color: #dfba96;
          border: 1px solid darkcyan;
          padding: 10px;
          font-size: 18pt;
          font-variant: small-caps;
-         color:black;}
+         color:black
+         font-weight:lighter}
 
     #li{text-align:left;font-family: Oswald;
     font-size:14pt;font-weight:normal}
