--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ h4 {font-size:18pt;text-align: left;}
 
 header {text-align: center;}
 
-#p2 {font-family: Oswald;
+#p2 {font-family: Oswald; text-align: left;
 font-size: medium;
 font-weight: normal;
 color:sienna}
