--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,9 @@ header {text-align: center;}
     font-size:14pt;
     font-weight:normal;
   
-        #li{text-align:center;font-family: Oswald;
-    font-size:14pt;font-weight:normal}
+    #li {text-align:center; font-family Oswald
+        font-size: 18pt;
+        font-weight:normal}
 
     #gallery {border:14px;color:darkcyan;}
   
@@ -57,8 +58,8 @@ header {text-align: center;}
     #lit
     {border:5px solid darkcyan;
         padding: 50px;
-        margin: 10px;}
-    {text-align: left;}
+        margin: 10px;
+    text-align: left;
     line-height: 1.5; padding: 4rem;
     font-size: 18pt;color:black;font-weight:normal; 
     border: 14px;text-align: left;text-align:left;
