--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,15 @@ header {text-align: center;}
 flex-direction: column; 
 align-items: center;}
   
-  
+  #figure {align-items: center; display:grid;
+    grid-template-columns: 2fr 1fr;}
+
+    #figcaption {display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    margin-left: 1rem;}
+
     #li{text-align:center; 
         font-family:Oswald;
         font-weight:normal}
@@ -86,15 +94,6 @@ align-items: center;}
         font-weight:normal;font-style: italic;}
     
     
-    @media screen and (min-width:60em) {}
-    figure{
-     display:grid;
-     grid-template-columns: minmax(2fr 1fr);
-    }
-
-    figcaption
-    display:flex
-        justify-content center
-        align-items center
-
-{}
+    @media screen and (min-width:60em) 
+    
+  
