--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ header {text-align: center;}
     font-weight: normal;
     color:sienna}
 
+    /*Hero and Footer Section
+
 #hero,footer
 {text-align: center;
    font-family:Oswald;
@@ -29,11 +31,13 @@ header {text-align: center;}
     font-variant: small-caps;
     color:black;}
 
+    /*Hobbie Section
     #hobbies
-    {text-align: center font-family Oswald; display: flex; flex-direction: column; align-items: center; margin: 1rem;}
+    {text-align: center font-family Oswald; 
+    display: flex; flex-direction: column; align-items: center; margin: 1rem;}
 
     #newbox 
-    {text-align: left;
+    {text-align: center;
        font-family:Oswald;
         background-color: #dfba96;
         border: 3px solid #368096;
@@ -44,29 +48,50 @@ header {text-align: center;}
 
     #hero,img {width: 300px;}
 
+    /*Bio Section
+
     #bio {text-align:center;font-family: Oswald;
     font-size:14pt; margin: 1em;
     font-weight:normal display flex; 
-flex-direction: column; 
-align-items: center;}
+    flex-direction: column; 
+    align-items: center;}
   
     #li{text-align:center; 
         font-family:Oswald;
         font-weight:normal}
 
-    #gallery {      
-        border:14px;
-        padding: 10px;}
+/*Gallery Section
+
+    #figure {      
+        padding: 10px;
+        font-variant: small-caps; 
+        width: 300px;
+        align-items: center; display:grid;
+        grid-template-columns: 2fr 1fr;}
   
     #gallery img{max-width: 100%;}
     
-    #gallery figure {text-align:center; font-variant: small-caps; width: 300px;}
+    #figure{
+        text-align:center; 
+        font-variant: small-caps; 
+        width: 300px;
+        align-items: center; display:grid;
+        grid-template-columns: 2fr 1fr;}
         
+        #figcaption {display:flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 2rem;
+            margin-left: 1rem;}
+
+
+/*Article Section   
 
     #lit{
         background-color:cornsilk;
         border: 10px solid darkcyan;
         padding: 50px;
+        max-width: 40rem;
         margin: 10px;
         text-align: left;
         line-height: 1.5;
@@ -76,15 +101,40 @@ align-items: center;}
         text-align: left;
         font-family: Oswald; 
         font-size:14pt;
-        margin: 0 auto}
+        margin-bottom:2ren}
    
 
-    #lit div p {padding: .5rem 0; clear:both}
+    #lit div {
+        padding:1rem;
+        max-width:40rem;
+        clear:both}
     
-    #lit div  p::first-line{color:darkcyan;font-size: 1.5em;
-        font-weight:normal;font-style: italic;}
-    
-    
+    #lit div p{
+        padding: .3rem 0
+        clear:both}
+
+    #litdiv p::first-letter{
+        color:darkcyan;
+        float left;
+        font-size: 3em;
+        font-weight: bold;
+        font-style: italic;
+        line-height:.75;
+    }
+        
     @media screen and (min-width:60em) 
-    
-  
+          
+    figure {
+        text-align:center; 
+        font-variant small-caps
+        width 300px
+    }
+        align-items: center; display:grid;
+        grid-template-columns: 2fr 1fr;}
+     
+    #gallerycaption {
+        display:flex
+        justify-contentcenter
+        align-items center;
+        font-size 2rem;
+        margin-left 1rem;}
