--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@ body{
     color:darkcyan}
 
 h1, h2, h3,h4,h5,h6
-{font-family:Oswald;color:#368096;}
+{font-family:Oswald;color:darkcyan;}
 h1 {font-size:44pt;text-align: center;color:rgb(46, 27, 13)}
 h2 {font-size:36pt;text-align: center; margin: 1em;  color:saddlebrown;font-style: italic;text-decoration: underline;}
-h3 {font-size:34pt;text-align: center;}
+h3 {font-size:24pt;text-align: center;}
 h4 {font-size:18pt;text-align: left;}
 
 h2 {text-align:center margin 1rem}
@@ -19,7 +19,7 @@ header {text-align: center;}
     font-weight: normal;
     color:sienna}
 
-    /*Hero and Footer Section
+    /*Hero and Footer Section*/
 
 #hero,footer
 {text-align: center;
@@ -31,7 +31,7 @@ header {text-align: center;}
     font-variant: small-caps;
     color:black;}
 
-    /*Hobbie Section
+    /*Hobbie Section*/
     #hobbies
     {text-align: center font-family Oswald; 
     display: flex; flex-direction: column; align-items: center; margin: 1rem;}
@@ -48,7 +48,7 @@ header {text-align: center;}
 
     #hero,img {width: 300px;}
 
-    /*Bio Section
+    /*Bio Section*/
 
     #bio {text-align:center;font-family: Oswald;
     font-size:14pt; margin: 1em;
@@ -60,7 +60,11 @@ header {text-align: center;}
         font-family:Oswald;
         font-weight:normal}
 
-/*Gallery Section
+/*Gallery Section*/
+
+#gallery{
+    border: 2px solid black;
+    margin-bottom:2rem}
 
     #figure {      
         padding: 10px;
@@ -71,6 +75,9 @@ header {text-align: center;}
   
     #gallery img{max-width: 100%;}
     
+    #gallery figure{
+        text-align:center}
+
     #figure{
         text-align:center; 
         font-variant: small-caps; 
@@ -85,41 +92,39 @@ header {text-align: center;}
             margin-left: 1rem;}
 
 
-/*Article Section   
+/*Article Section */  
 
     #lit{
         background-color:cornsilk;
-        border: 10px solid darkcyan;
+        border: 10px solid saddlebrown;
         padding: 50px;
         max-width: 40rem;
         margin: 10px;
-        text-align: left;
+        text-align: center;
         line-height: 1.5;
-        padding: 4rem;
         color:black;
         font-weight:normal; 
-        text-align: left;
-        font-family: Oswald; 
+        text-indent: -12px
+        align-items left
+        font-family Oswald; 
         font-size:14pt;
-        margin-bottom:2ren}
+        margin-bottom:2rem}
    
 
-    #lit div {
-        padding:1rem;
-        max-width:40rem;
+    #lit div p {
+        color:black:2rem;
+        max-width: 40rem;
+        margin: 0 auto;
         clear:both}
     
-    #lit div p{
-        padding: .3rem 0
-        clear:both}
+        /*Dropcaps*/
 
-    #litdiv p::first-letter{
+    #lit div p::first-letter {
         color:darkcyan;
-        float left;
-        font-size: 3em;
-        font-weight: bold;
-        font-style: italic;
-        line-height:.75;
+        float-left;
+        font-size: 2em;
+        font-weight:400
+        line-height:1.25;
     }
         
     @media screen and (min-width:60em) 
