--- a/css/style.css
+++ b/css/style.css
@@ -131,13 +131,19 @@ header {text-align: center;}
     
         /*Dropcaps*/
 
-    #lit div p::first-letter {
-        color:darkcyan 2em
+    #lit div p:first-letter {
+        color:darkcyan 4em
         float-left
         line-height 1.25;
     }
         
-    @media screen and (min-width:60em) 
-    {figure
-        display:grid
-        grid-template-columns: 2fr 1fr}
+    @media screen and (min-width:60em) {
+       figure { 
+        display: grid;
+        grid-template-columns:2fr 1fr}
+    
+        figcaption {
+            display: flex;
+            justify-content: center;
+            align-items: center}
+        }
