--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body{
 h1, h2, h3,h4,h5,h6
 {font-family:Oswald;color:darkcyan;}
 h1 {font-size:44pt;text-align: center darkcyan;}
-h2 {font-size:36pt;text-align: center; margin: .1rem;  color:saddlebrown;font-style: italic;padding: 50px;}
+h2 {font-size:36pt;text-align: center; margin: .1em;  color:saddlebrown;font-style: italic;padding: 50px;}
 h3 {font-size:24pt;text-align: center;}
 h4 {font-size:18pt;text-align: left;}
 
@@ -50,13 +50,21 @@ header {text-align: center;}
     #hobbies
     {display:flex;
     flex-direction: column;
-    font-family:Oswald; 
-    text-align: center;}
+    align-items: center;
+    font-family:Oswald;
+    font:bolder;
+    background-color:cadetblue;; 
+    margin: .1em}
+
+#hobbies
+    h2 {
+        border:#f3dec8 (1, 1, 1,1);
+        margin: .1em;
+      }
 
     #hobbies ul {
-    list-style-type: square black;
     text-align: center;
-    color:cadetblue;
+    color:blanchedalmond;
     font:bolder;}
 
 /*New Box Section*/
@@ -66,7 +74,7 @@ header {text-align: center;}
         color:darkslategrey; 
         font:bolder;
         padding: 10px 1/4; 
-        margin: 10px;
+        margin: .1em;
         text-align: center;
         font-size: 18pt;
         max-height: fit-content;
@@ -76,6 +84,7 @@ header {text-align: center;}
 
         #mushroom {
             background-color:cornsilk;
+            border:slategrey 3px solid;
             padding: 10px 1/4; 
             margin: 10px;
             text-align: center;
@@ -89,12 +98,18 @@ header {text-align: center;}
     /*Bio Section*/
 
     #bio {
-    text-align:center;
-    font-family: Oswald;
-    font-size:14pt; margin: 1em;
-    font-weight:normal display flex; 
-    flex-direction: column; 
-    align-items: center;}
+        background-color:blanchedalmond;
+        border:slategrey 3px solid;
+        margin-top: 10px;
+        margin-right: 10px;
+        margin-left: 10px;
+        margin-bottom: 10px;
+        text-align:center;
+        font-family: Oswald;
+        font-size:14pt;
+        font-weight:normal display flex; 
+        flex-direction: column; 
+        align-items: center;}
   
     #li{text-align:center; 
         font-family:Oswald;
@@ -103,7 +118,7 @@ header {text-align: center;}
 /*Gallery Section*/
 
     #gallery{
-    border: 2px solid black;
+    border: 5px solid darkcyan;
     align-items: center;
     margin-bottom:2rem}
 
@@ -158,41 +173,50 @@ header {text-align: center;}
       
  /*Dropcaps*/
 
-    #lit div
-        p  {
+    #lit div p:first-child:first-letter {
         padding: 2rem 0;
         clear: both;
         max-width: 40rem;
-        margin: 0 auto}
-    
-        #lit div p::first-letter {
-        color: saddlebrown 1.5em;
-        float:inline-start;
+        margin: 0 auto;
+        float:.5rem inline-start;
+        color: black;
+        background-color: darkseagreen;
         font-size: 1.5rem;
-         padding: .5;
-        border: 1px;
+        padding: .5rem;
+        border: 1px outset darkgrey;
         font-weight: bolder;
-        text-shadow: 2px 2px 2px 2px coral;
+        box-shadow: .5px .5px .5px .5px coral;
     }
-       /*tablet size*/ 
-    @media screen and (min-width:60em){
-    figure {
-       display: grid;
-       grid-template-columns: 2fr 1fr;}}
+           
     
+        
+/*tablet size*/ 
+@media screen and (min-width:60em){
+    figure {
+    display:grid;
+    grid-template-columns: 1fr 2fr;}
+
     figcaption {
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 2rem;
-        margin-left: 1rem;}
-        
+        margin-left: 1rem;}}
 
-   /*larger screen*/ 
-     @media screen and (min-width:100em) {
-        display grid;
-        grid-template-columns: 1fr 1fr 1fr;}
-        
-    #lit div{
-    max-width:100%;
-    columns: 20em;}
+    figure image {width: 100%;}
+
+   /*larger screen size*/ 
+        @media screen and (min-width:100em) {
+        #gallery {
+        display:grid; 
+        grid-template-columns: 1fr 1fr 1fr 1fr}
+    
+        hr{display:none;}
+
+        #gallery h2 {
+        grid-column: 1/-1;}
+
+        figure {display: block;}
+
+        #lit div 
+        max-width:100%;
+        columns: 20rem;}
