--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,6 @@ header {text-align: center;}
 
         figure {display: block;}
 
-        #lit div 
-        max-width:100%;
-        columns: 20rem;}
+        #lit div {
+        max-width: 100%;
+        columns: 20rem;}}
