--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,17 @@ header {text-align: center;}
         margin-bottom:2rem;
         }
       
+        #lit div{
+            padding: 2rem;
+            max-width: 40rem;
+            margin: 0 auto;
+        }
+
+        #lit div p {
+            padding: .3rem 0;
+            clear: both;
+        }
+
  /*Dropcaps*/
 
     #lit div p:first-child:first-letter {
