--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ header {text-align: center;}
     align-items: center;
     font-family:Oswald;
     font:bolder;
-    background-color:cadetblue;; 
+    background-color:cadetblue;
     border:slategrey 5px solid;
     margin:.1em}
 
@@ -213,10 +213,55 @@ header {text-align: center;}
     }
            
     /* Contact Form*/
-        #formElements {
-            display:grid; }
+        #formElements{
+            display:grid;
+            row-gap: .75em;
+            font-variant: small-caps;
+        }
+    
+        #contact{
+            padding: 1.5rem;
+            max-width:500px;
+            margin: 1.5rem auto;
+            font-variant: small-caps;
+        }
 
-        
+        fieldset{
+            border: 2px solid saddlebrown;
+            margin-top: 1em;
+            margin-bottom: 1em;
+            font-variant: small-caps;
+        }
+
+    legend{
+        background-color: saddlebrown;
+        color:bisque;
+        padding: 0.5rem;
+        font-variant: small-caps;
+    }
+
+    #contact ul{
+        list-style: none;
+        padding:0px;
+    }
+      
+    #contact li{
+        margin: 1rem;
+    }
+
+    #contact button {
+        background-color: saddlebrown;
+        padding: .5em;
+        color:bisque;
+        border: .25em solid darkslategray;
+        max-width: 500px;
+       font-variant: small-caps;
+       font-size: larger;
+       
+    }
+
+
+
 /*tablet size*/ 
 @media screen and (min-width:60em){
     figure {
