--- a/css/style.css
+++ b/css/style.css
@@ -230,6 +230,7 @@ header {text-align: center;}
             border: 2px solid saddlebrown;
             margin-top: 1em;
             margin-bottom: 1em;
+            border-radius: 2rem;
             font-variant: small-caps;
         }
 
