--- a/css/nav.css
+++ b/css/nav.css
@@ -1,18 +1,23 @@
 /* make scrolling smooth */
 
 html {
-  scroll-
+  scroll-behavior: smooth;
 }
-
 
 /* 
  get rid of padding & sizing on body so
  header is at top
 */
-
+body {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 
 /* add some padding back to rest of page */
-
+main {
+  padding: 2vw;
+}
 
 /* navbar */
 
