--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 
 h1, h2, h3,h4,h5,h6
 {font-family:Oswald;color:darkcyan;}
-h1 {font-size:44pt;text-align: center darkcyan;}
+h1 {font-size:44pt;text-align: center; color: burlywood;}
 h2 {font-size:36pt;text-align: center; margin: .1em;  color:saddlebrown;font-style: italic;padding: 50px;}
 h3 {font-size:24pt;text-align: center;}
 h4 {font-size:18pt;text-align: left;}
