add kogo styles

--- a/css/nav.css
+++ b/css/nav.css
@@ -27,14 +27,23 @@ display:flex;
 flex-direction:column;
 font-size: 1.5rem;
 margin-bottom: 1rem;
-
 }
 
 
 /* logo */
+.logo {
+  display:flex;
+  align-items: center;
+}
 
+.logo img{
+  height: 5vw;
+  width: 5vw;
+}
 
-
+.logo h1 {
+ font-size: 1.2em; 
+}
 /* navigation list */
 
 
