--- a/css/nav.css
+++ b/css/nav.css
@@ -60,7 +60,7 @@ padding: 1rem;
 .navbar-links a {
   color:bisque;
   background-color: darkcyan;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   padding: .5rem .5rem;
   letter-spacing: 1.5px;
   text-decoration: none;
@@ -80,3 +80,21 @@ media query for non-mobile nav bar
 min-width set to width of nav elements 
 such that no text wraps 
 */
+
+@media screen and (min-width: 60rem)
+{
+ .navbar-links {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+ }
+ .navbar {
+  flex-direction: row;
+  justify-content: space-between;
+ }
+
+ .navbar ul {
+  display: flex;
+  justify-content: space-between;
+ }
+}
