--- a/css/nav.css
+++ b/css/nav.css
@@ -21,8 +21,8 @@ main {
 
 /* navbar */
 .navbar {
-background-color:darkcyan;
-color: burlywood;
+background-color:grey;
+color: black;
 display:flex;
 flex-direction:column;
 font-size: 1.5rem;
@@ -59,7 +59,7 @@ padding: 1rem;
 */
 .navbar-links a {
   color:bisque;
-  background-color: darkcyan;
+  background-color: grey;
   font-size: 1.5rem;
   padding: .5rem .5rem;
   letter-spacing: 1.5px;
@@ -68,7 +68,7 @@ padding: 1rem;
 }
 .navbar-links a:hover,
 .navbar-links a:focus {
-  color:brown;
+  color:firebrick;
   background-color: beige;
   border-radius:10px;
   outline: none;
