--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color:#f3dec8;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    background-color:darkgray;
     color:grey}
 
 h1, h2, h3,h4,h5,h6
@@ -13,7 +13,7 @@ h4 {font-size:18pt;text-align: left;}
 h2 {text-align:center margin 1rem}
 header {text-align: center;}
 
-#p2 {font-family: Oswald; 
+#p2 {font-family:Verdana, Geneva, Tahoma, sans-serif; 
     text-align:left;
     font-size: 12pt;
     font-weight: normal;
@@ -24,7 +24,7 @@ header {text-align: center;}
 /*Hero Section*/
     #hero
     {flex: auto;
-    font-family: Oswald;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color:sil;
     border:5px solid darkslategrey;
     border-style:groove;
@@ -53,7 +53,7 @@ header {text-align: center;}
     #footer 
     {text-align: center;
     font-family:Oswald;
-    background-color:firebrick;
+    background-color: dimgray;
     border: 1.5px solid darkslategray;
     padding: 10px;
     font-size: 12pt;
@@ -66,9 +66,9 @@ header {text-align: center;}
     {display:flex;
     flex-direction: column;
     align-items: center;
-    font-family:Oswald;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font:bolder;
-    background-color:cadetblue;
+    background-color:darkslategrey;
     border:slategrey 5px solid;
     margin:.1em}
 
@@ -84,7 +84,7 @@ header {text-align: center;}
 /*New Box Section*/
     #newbox {
         background-color:cadetblue;
-        font-family:Oswald;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color:darkslategrey; 
         font:bolder;
         padding: 10px 1/4; 
@@ -92,12 +92,12 @@ header {text-align: center;}
         text-align: center;
         font-size: 18pt;
         max-height: fit-content;
-        color:aquamarine;
+        color:lightgrey;
         align-items: center;
         }
 
         #mushroom {
-            background-color:cornsilk;
+            background-color:silver;
             border:slategrey 3px solid;
             padding: 10px 1/4; 
             margin: 10px;
@@ -112,21 +112,21 @@ header {text-align: center;}
     /*Bio Section*/
 
     #bio {
-        background-color:blanchedalmond;
+        background-color:silver;
         border:slategrey 5px solid;
         margin-top: 10px;
         margin-right: 10px;
         margin-left: 10px;
         margin-bottom: 10px;
         text-align:center;
-        font-family: Oswald;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
         font-size:14pt;
         font-weight:normal display flex; 
         flex-direction: column; 
         align-items: center;}
   
     #li{text-align:center; 
-        font-family:Oswald;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         font-weight:normal}
 
 /*Gallery Section*/
@@ -174,13 +174,13 @@ header {text-align: center;}
 /*Article Section */  
 
     #lit{
-        background-color:cornsilk;
+        background-color:lightgrey;
         border: 5px solid firebrick;
         padding: 50px;
         text-align: left;
         line-height: 1.5;
         font-weight:normal; 
-        font-family: Oswald; 
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
         font-size:14pt;
         margin-bottom:2rem;
         }
@@ -205,7 +205,7 @@ header {text-align: center;}
         margin: 0 auto;
         float:.5rem inline-start;
         color: black;
-        background-color: darkseagreen;
+        background-color: darkgoldenrod;
         font-size: 1.5rem;
         padding: .5rem;
         border: 1px outset darkgrey;
