--- a/css/nav.css
+++ b/css/nav.css
@@ -60,6 +60,7 @@ padding: 1rem;
 .navbar-links a {
   color:black;
   background-color: grey;
+  font-variant: small-caps;
   font-size: 1.5rem;
   padding: .5rem .5rem;
   letter-spacing: 1.5px;
@@ -68,8 +69,10 @@ padding: 1rem;
 }
 .navbar-links a:hover,
 .navbar-links a:focus {
-  color:firebrick;
-  background-color: darkgoldenrod;
+  color:black;
+  font-variant: small-caps;
+  font:bolder;
+  background-color: goldenrod;
   border-radius:10px;
   outline: none;
 }
